# my_lib_try

./: CMakeLists.txt  README.md
include/: myfunc.h
libsrc/: myfunc.cpp
src/: a.out  main.cpp  out
